# eventinator

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
onehacks/: database.py  events.py  forms.py  server.py  utils.py
onehacks/auth/: __init__.py  discord.py  firebase.py
onehacks/static/css/: style-log.css  style-log.css.map  style-log.scss  stylesheet.css  stylesheet.sass  stylesheet.scss
onehacks/static/javascript/: detect_timezone.js
onehacks/templates/: dashboard.html  event-creation.html  index.html
onehacks/views/: __init__.py  discord.py  event.py  index.py  user.py
src/: __main__.py  database.py  events.py  forms.py  server.py
src/auth/: __init__.py  discord.py  firebase.py
src/static/css/: style-log.css.map  style-log.scss  stylesheet.scss
src/static/json/: meta-tag.json
src/templates/: dashboard.html  error.html  event-creation.html  event-display.html  event-update.html  not-logged-in.html
src/views/: __init__.py  discord.py  event.py  index.py  user.py
