[tool.poetry]
name = "onehacks-project"
version = "0.1.0"
description = "Our submission for OneHacks hackathon"
authors = ["cs-gang"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^21.3.2"
python-dotenv = "^0.17.0"
Jinja2 = "^2.11.3"
databases = "^0.4.3"
Sanic-WTF = "^0.6.0"
asyncpg = "^0.22.0"
firebase-admin = "^4.5.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
black = "^20.8b1"
aiosqlite = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
